--- a/package.json
+++ b/package.json
@@ -7,10 +7,12 @@
   },
   "dependencies": {
     "body-parser": "~1.15.1",
+    "config": "^1.21.0",
     "cookie-parser": "~1.4.3",
     "debug": "~2.2.0",
     "ejs": "~2.4.1",
     "express": "~4.13.4",
+    "express-sanitizer": "^1.0.1",
     "mocha": "^3.1.0",
     "mongoose": "^4.6.3",
     "morgan": "~1.7.0",
