--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "mocha": "^3.1.0",
     "mongoose": "^4.6.3",
     "morgan": "~1.7.0",
-    "serve-favicon": "~2.3.0"
+    "serve-favicon": "~2.3.0",
+    "sleep-async": "^1.0.1"
   }
 }
